maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:3: error: '<-' expected but ')' found.
  for(i-> 0 to (getMondeLargeur()-1)){
                                    ^JediEscaper:11: error: illegal start of simple expression
}
^JediEscaper:14: error: ';' expected but '(' found.
  var Biscuit:Array[Int](2) = getBisctuit();
                        ^